# polargraph

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILD_LOG.md  CALIBRATION.md  README.md  calibrate.bat  calibrate.command  firmware.uf2  polargraph_hardware_action_plan.md  polargraph_project_document.md  pyproject.toml  sans12v-rp2040-test.txt  studio.bat  studio.command
.claude/: launch.json
firmware/: bring-up.md  pinmap.md
profiles/: machine.toml  warp.json
spikes/: ik_spike.py
src/polargraph/: __init__.py  cli.py  gcode.py  geometry.py  patterns.py  profile.py  segment.py  sender.py  server.py  svgio.py  warp.py
src/polargraph/data/: machine.toml
src/polargraph/studio/: README.md  index.html
tests/: test_geometry.py  test_pipeline.py  test_sender.py
tools/: grbl.py  studio_server.py  total_test.py
